--- a/Project1/app/src/main/res/layout/activity_main.xml
+++ b/Project1/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:id="@+id/id_gameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Game Name"
-        android:textSize="40dp"
+        android:text="@string/game_name"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/id_playButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,22 +21,24 @@
         android:id="@+id/id_playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PLAY"
-        android:textSize="20dp"
+        android:text="@string/play_button"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TextSizeCheck" />
 
     <Button
-        android:id="@+id/id_settingsButton"
+        android:id="@+id/id_scoreButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SETTINGS"
-        android:textSize="20dp"
+        android:text="@string/score_button"
+        android:textSize="20sp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/id_playButton" />
+        app:layout_constraintTop_toBottomOf="@+id/id_playButton"
+        tools:ignore="TextSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
