Advanced snek logic

--- a/Project1/app/src/main/res/layout/activity_game.xml
+++ b/Project1/app/src/main/res/layout/activity_game.xml
@@ -5,71 +5,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/BLACK"
+    android:padding="20dp"
     tools:context=".game.GameActivity">
 
     <com.csd3156.project1.game.CanvasView
         android:id="@+id/gameCanvasID"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginTop="76dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/textViewtiltvalX"
-    android:text=" X value:"
-    android:textColor="#FFFFFF"
-    android:textSize="30dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/textViewtiltvalX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="616dp"
+        android:text=" X value:"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewtiltvalY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="496dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="564dp"
         android:text=" Y value:"
         android:textColor="#FFFFFF"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/buttonUpID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/UP"
-        app:layout_constraintBottom_toTopOf="@+id/buttonRightID"
-        app:layout_constraintEnd_toStartOf="@+id/buttonRightID"
-        app:layout_constraintStart_toEndOf="@+id/buttonLeftID" />
+    <!--    <Button-->
+    <!--        android:id="@+id/buttonUpID"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/UP"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/buttonRightID"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/buttonRightID"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/buttonLeftID" />-->
 
-    <Button
-        android:id="@+id/buttonDownID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/DOWN"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <!--    <Button-->
+    <!--        android:id="@+id/buttonDownID"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/DOWN"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent" />-->
 
-    <Button
-        android:id="@+id/buttonLeftID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/LEFT"
-        app:layout_constraintBottom_toTopOf="@+id/buttonDownID"
-        app:layout_constraintEnd_toStartOf="@+id/buttonDownID" />
+    <!--    <Button-->
+    <!--        android:id="@+id/buttonLeftID"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/LEFT"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/buttonDownID"-->
+    <!--        app:layout_constraintEnd_toStartOf="@+id/buttonDownID" />-->
 
-    <Button
-        android:id="@+id/buttonRightID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/RIGHT"
-        app:layout_constraintBottom_toTopOf="@+id/buttonDownID"
-        app:layout_constraintStart_toEndOf="@+id/buttonDownID" />
+    <!--    <Button-->
+    <!--        android:id="@+id/buttonRightID"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="@string/RIGHT"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/buttonDownID"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/buttonDownID" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
