--- a/Project1/app/src/main/res/layout/activity_game.xml
+++ b/Project1/app/src/main/res/layout/activity_game.xml
@@ -8,6 +8,31 @@
     android:padding="20dp"
     tools:context=".game.GameActivity">
 
+    <TextView
+        android:id="@+id/idTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:fontFamily="@font/pressstart2p"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/idScoreTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/pressstart2p"
+        android:text="0"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/gameCanvasID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idTimeTextView" />
+
     <com.csd3156.project1.game.CanvasView
         android:id="@+id/gameCanvasID"
         android:layout_width="match_parent"
@@ -17,6 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!--    CEDRIC'S STUFF -->
     <TextView
         android:id="@+id/textViewtiltvalX"
         android:layout_width="wrap_content"
@@ -40,39 +66,5 @@
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <!--    <Button-->
-    <!--        android:id="@+id/buttonUpID"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/UP"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/buttonRightID"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/buttonRightID"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/buttonLeftID" />-->
-
-    <!--    <Button-->
-    <!--        android:id="@+id/buttonDownID"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/DOWN"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent" />-->
-
-    <!--    <Button-->
-    <!--        android:id="@+id/buttonLeftID"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/LEFT"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/buttonDownID"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/buttonDownID" />-->
-
-    <!--    <Button-->
-    <!--        android:id="@+id/buttonRightID"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/RIGHT"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/buttonDownID"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/buttonDownID" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
