--- a/Project1/app/src/main/res/layout/activity_score.xml
+++ b/Project1/app/src/main/res/layout/activity_score.xml
@@ -18,7 +18,7 @@
         android:layout_width="200dp"
         android:layout_height="515dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textViewTimer">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -27,5 +27,24 @@
         android:layout_width="200dp"
         android:layout_height="515dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewScore" />
+
+    <TextView
+        android:id="@+id/textViewScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/SCORE"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:text="@string/TIME"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/textViewScore"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
