--- a/Project1/app/src/main/res/layout/activity_score.xml
+++ b/Project1/app/src/main/res/layout/activity_score.xml
@@ -47,4 +47,14 @@
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textViewScore"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/resetDataBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/resetData"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listViewHeight" />
 </androidx.constraintlayout.widget.ConstraintLayout>
